[package]
name = "mlib"
version = "0.1.0"
authors = ["Jakub HlusiÄka <jakub.hlusicka@email.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-mapp = { path = "proc_macro_mapp" }
serde = { version = "1.0", features = ["derive"] }
ammolite-math = { path = "../ammolite/ammolite-math" }
base64 = "0.11.0"
